[package]
name = "msg800"
version = "1.1.2"
edition = "2021"

[dependencies]
aes = "0.8.4"
bytebuffer = "2.3.0"
cbc = "0.1.2"
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.39.3", features = ["full"] }

[[bin]]
name = "msg800-socks5"
path = "src/bin/socks5.rs"

[[bin]]
name = "msg800-tunel"
path = "src/bin/tunnel.rs"
